feat: Add new themes and EQ presets
Introduces several new color themes (sunset, forest, ocean, rose, matrix) to enhance the application's visual customization.

Additionally, a 'custom' option has been added to the Equalizer presets, allowing users to define their own EQ settings. The Player component has been updated to support these new themes and the custom EQ functionality.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,51 @@
         --accent-hover: #0ea5e9; /* sky-500 */
         --accent-focus: #0284c7; /* sky-600 */
       }
+      html.sunset {
+        --bg-primary: #2d192b;
+        --bg-secondary: #4a2a41;
+        --text-primary: #fcd9b8;
+        --text-secondary: #e3a890;
+        --accent: #ff8c61;
+        --accent-hover: #ff7340;
+        --accent-focus: #e66230;
+      }
+      html.forest {
+        --bg-primary: #1a2e28;
+        --bg-secondary: #27403b;
+        --text-primary: #e6f0e4;
+        --text-secondary: #a0b5a6;
+        --accent: #5cc28a;
+        --accent-hover: #4aad79;
+        --accent-focus: #3e9466;
+      }
+      html.ocean {
+        --bg-primary: #0a1f33;
+        --bg-secondary: #133352;
+        --text-primary: #d1e3f3;
+        --text-secondary: #8da9c4;
+        --accent: #33b3cc;
+        --accent-hover: #299fb3;
+        --accent-focus: #228b9e;
+      }
+      html.rose {
+        --bg-primary: #3d1c2b;
+        --bg-secondary: #5c3748;
+        --text-primary: #fde6e8;
+        --text-secondary: #e6b2c2;
+        --accent: #f4acb7;
+        --accent-hover: #f198a6;
+        --accent-focus: #d88390;
+      }
+      html.matrix {
+        --bg-primary: #000000;
+        --bg-secondary: #0D0D0D;
+        --text-primary: #00ff41;
+        --text-secondary: #008f11;
+        --accent: #00ff41;
+        --accent-hover: #00e63a;
+        --accent-focus: #00cc33;
+      }
 
       body {
         -webkit-tap-highlight-color: transparent;
