--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>רדיו פרימיום</title>
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="data:application/manifest+json;charset=utf-8,%7B%22name%22%3A%22%D7%A8%D7%93%D7%99%D7%95%20%D7%A4%D7%A8%D7%99%D7%9E%D7%99%D7%95%D7%9D%22%2C%22short_name%22%3A%22%D7%A8%D7%93%D7%99%D7%95%20%D7%A4%D7%A8%D7%99%D7%9E%D7%99%D7%95%D7%9D%22%2C%22description%22%3A%22%D7%A8%D7%93%D7%99%D7%95%20%D7%A4%D7%A8%D7%99%D7%9E%D7%99%D7%95%D7%9D%20-%20%D7%90%D7%A4%D7%9C%D7%99%D7%A7%D7%A6%D7%99%D7%99%D7%AA%20%D7%A8%D7%93%D7%99%D7%95%20%D7%99%D7%A9%D7%A8%D7%90%D7%9C%D7%99%D7%AA%20%D7%97%D7%99%D7%A0%D7%9E%D7%99%D7%AA%20%D7%95%D7%A0%D7%A7%D7%99%D7%99%D7%94%2C%20%D7%9E%D7%95%D7%AA%D7%90%D7%9E%D7%AA%20%D7%9C%D7%A9%D7%99%D7%9E%D7%95%D7%A9%20%D7%91%D7%A8%D7%9B%D7%91%20%D7%95%D7%91%D7%9B%D7%9C%20%D7%9E%D7%A7%D7%95%D7%9D.%20%D7%94%D7%90%D7%96%D7%9F%20%D7%9C%D7%AA%D7%97%D7%A0%D7%95%D7%AA%20%D7%94%D7%A8%D7%93%D7%99%D7%95%20%D7%94%D7%9E%D7%95%D7%91%D7%99%D7%9C%D7%95%D7%AA%20%D7%91%D7%99%D7%A9%D7%A8%D7%90%D7%9C%20%D7%A2%D7%9D%20%D7%9E%D7%9E%D7%A9%D7%A7%20%D7%A4%D7%A9%D7%95%D7%98%20%D7%95%D7%99%D7%93%D7%99%D7%93%D7%95%D7%AA%D7%99.%22%2C%22start_url%22%3A%22.%22%2C%22display%22%3A%22standalone%22%2C%22background_color%22%3A%22%23111827%22%2C%22theme_color%22%3A%22%23111827%22%2C%22icons%22%3A%5B%7B%22src%22%3A%22icon.svg%22%2C%22sizes%22%3A%22any%22%2C%22type%22%3A%22image%2Fsvg%2Bxml%22%7D%5D%7D" />
     <meta name="theme-color" content="#111827" />
     <link rel="apple-touch-icon" href="icon.svg">
     <link rel="icon" href="icon.svg" type="image/svg+xml">
