--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>רדיו פרימיום</title>
     <link rel="manifest" href="manifest.json?v=1.1" />
     <meta name="theme-color" content="#111827" />
+    <link rel="apple-touch-icon" href="images/icon-192.png">
+    <link rel="icon" href="images/icon-192.png" type="image/png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="רדיו פרימיום">
-    <link rel="apple-touch-icon" href="images/icon-192.png">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
