fix: Improve audio context setup and media session metadata
The AudioContext constructor is now called without arguments to improve compatibility. Media Session metadata updates are also more robust, and unnecessary logic for handling track changes has been removed. Icons have been updated for better PWA experience.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>רדיו פרימיום</title>
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#111827" />
-    <link rel="apple-touch-icon" href="icon.svg">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="icon" href="icon-192.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
