feat: Introduce action menu for track interactions
Adds functionality for users to interact with song titles via an action menu. This includes:
- New icons for Copy, YouTube Music, Spotify, and Lyrics.
- UI styling for the action menu overlay and container with smooth transitions.
- Integration of the `onOpenActionMenu` prop in `Player` and `NowPlaying` components to trigger the menu.
- State management for the action menu in `App.tsx` to control its visibility and the song title it operates on.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
         to { transform: translateX(50%); }
       }
 
+      /* Action Menu Styles */
+      .action-menu-overlay {
+        transition: opacity 300ms ease-in-out;
+      }
+      .action-menu-container {
+        transition: transform 300ms ease-in-out;
+      }
+
       /* Static App Shell for instant loading feedback */
       #app-shell {
         position: fixed;
