feat: Add action menu for song options
Introduces a new action menu component to provide users with options related to the currently playing song, such as copying the title or searching on music platforms. Also includes styling for colorful action buttons and a fix for AudioContext initialization.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,31 @@
       .action-menu-container {
         transition: transform 300ms ease-in-out;
       }
+      /* Action Menu Colorful Buttons */
+      .action-btn-copy {
+        background-color: #3b82f6; /* blue-500 */
+      }
+      .action-btn-copy:hover {
+        background-color: #2563eb; /* blue-600 */
+      }
+      .action-btn-ytmusic {
+        background-color: #ef4444; /* red-500 */
+      }
+      .action-btn-ytmusic:hover {
+        background-color: #dc2626; /* red-600 */
+      }
+      .action-btn-spotify {
+        background-color: #22c55e; /* green-500 */
+      }
+      .action-btn-spotify:hover {
+        background-color: #16a34a; /* green-600 */
+      }
+      .action-btn-lyrics {
+        background-color: #f59e0b; /* amber-500 */
+      }
+      .action-btn-lyrics:hover {
+        background-color: #d97706; /* amber-600 */
+      }
 
       /* Static App Shell for instant loading feedback */
       #app-shell {
