--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0" />
     <title>רדיו פרימיום</title>
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#111827" />
