--- a/index.html
+++ b/index.html
@@ -176,13 +176,18 @@
         animation: fade-in-up 0.3s ease-out;
       }
     </style>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^18.3.0/",
     "react": "https://aistudiocdn.com/react@^18.3.0",
     "react-dom/client": "https://aistudiocdn.com/react-dom@^18.3.0/client",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.0/",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
   }
 }
 </script>
