--- a/index.html
+++ b/index.html
@@ -175,6 +175,32 @@
       .animate-fade-in-up {
         animation: fade-in-up 0.3s ease-out;
       }
+
+      /* Initial loader */
+      .app-loader {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: var(--bg-primary);
+        z-index: 9999;
+      }
+      .loader-spinner {
+        border: 4px solid var(--bg-secondary);
+        border-top: 4px solid var(--accent);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
     </style>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
@@ -193,7 +219,11 @@
 </script>
 </head>
   <body class="bg-primary text-primary font-sans">
-    <div id="root"></div>
+    <div id="root">
+      <div class="app-loader">
+        <div class="loader-spinner"></div>
+      </div>
+    </div>
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
