--- a/index.html
+++ b/index.html
@@ -202,10 +202,6 @@
         100% { transform: rotate(360deg); }
       }
     </style>
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -213,7 +209,10 @@
     "react": "https://aistudiocdn.com/react@^18.3.0",
     "react-dom/client": "https://aistudiocdn.com/react-dom@^18.3.0/client",
     "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.0/",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
+    "firebase/app": "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
   }
 }
 </script>
